<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/shape_background_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_first_one"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_first_two"
                android:textSize="13sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:lineSpacingMultiplier="2"
            android:text="@string/dialog_first_three"
            android:textSize="13sp" />

        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_first_four"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_first_five"
                android:textColor="@color/theme"
                android:textSize="13sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_first_six"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_first_seven"
                android:textColor="@color/theme"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_first_eight"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1"
            android:text="@string/dialog_first_nine"
            android:textSize="13sp" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1"
            android:text="@string/dialog_first_ten"
            android:textSize="13sp" />

        <View style="@style/line"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_not_agree"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/dialog_first_disagree"
                android:textColor="@color/theme"
                android:textSize="14sp" />
            <View android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_line"/>
            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/dialog_first_agree"
                android:textColor="@color/theme"
                android:textSize="14sp" />
        </LinearLayout>




    </LinearLayout>
</RelativeLayout>